fix: overflow about

--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -7,6 +7,7 @@
   font-size: 18px;
   line-height: 1.222;
   max-width: 40ch;
+  text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
 }
@@ -17,7 +18,6 @@
     text-align: center;
     width: 100%;
     align-items: center;
-    white-space: break-spaces;
   }
 }
 
